1999-11-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/options.cc (deliver_ok, deliver_cancel): New functions.
	(populate): Use the new functions for signals.
	(handle_ok, handle_cancel): Rewrote as non-static member.

	* include/utils.h (class options_dialog): Make members handle_ok
 	and handle_cancel non-static.

	* lib/about.cc (create_widget): Removed.

	* lib/options.cc (create_widget): Removed.

	* include/utils.h (class options_dialog): Remove member
 	create_widget.
	* include/glclock.h (about_dialog): Likewise.

	* lib/modaldialog.cc (create_window): Replace code that used
 	create_widget.

	* include/utils.h (class modal_dialog): Make configure pure
 	virtual.  Remove member create_widget.

	* lib/options.cc (update, configure): New functions.
	(populate): Change the argument type.
	(create_widget): Use configure.

	* include/utils.h (class options_dialog): Add new members
 	configure and update.  Change the argument type of populate.

	* lib/about.cc (populate): Change the argument type.
	(configure): New function.
	(create_widget): Use configure.

	* include/glclock.h (class about_dialog): Add new member
 	configure.  Change the argument type of populate.

	* Makefile.am (SUBDIRS): Move po to the end.

	* include/utils.h (class modal_dialog): Rename populate to
 	configure.  Add new member update.

	* lib/about.cc (populate): Change the signal data to this.

	* NEWS: Updated.

	* configure.in: Move po/Makefile.in at the last in AC_OUTPUT.
	(ALL_LINGUAS): Rename ja to ja.eucjp.

	* bin/main.cc (class clock_app): Add member ad.
	(describe): Use member ad instead of local object.

	* lib/about.cc (handle_ok): Replace call of quit using close.
	* lib/options.cc (handle_ok, handle_cancel): Likewise.

	* lib/modaldialog.cc (take_action, close, add, create_window,
 	destroy_window): New functions.
	(quit): Removed.
	(act): Use create_window.  Check if window is visible.
	(handle_delete_event): Close as a negative action.